# MIlitaryService

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 19b3a95fbaf0_add_id_column_to_assoc_table.py  404530cebed6_add_rels_between_orders_and_items.py  8007fea76086_update_associasion_table_order_items.py  9ed68c86099c_add_m2m_order_items.py  a191fafaac5f_update_images_field_in_items_table.py  a613dac16765_update_order_items_asociation_table.py
backend/api/: __init__.py
backend/api/items/: crud.py  schemas.py  utils.py  views.py
backend/api/orders/: crud.py  schemas.py  utils.py  views.py
backend/core/: __init__.py
backend/core/db/: __init__.py  db.py
backend/core/models/: __init__.py  item.py  order.py  order_items.py
backend/core/s3/: s3_hepler.py
backend/core/settings/: __init__.py  settings.py
backend/src/: dependencies.py  main.py
backend/src/alembic/: env.py
backend/src/dto/: orders.py  products.py
backend/src/models/: __init__.py  base.py  order.py  order_products.py  product.py
backend/src/presentation/: __init__.py  orderRouter.py  productRouter.py
backend/src/repositories/: __init__.py
backend/src/services/: __init__.py
backend/src/utils/: base_service.py
info_bot/: .env  bot.py  pyproject.toml
info_bot/api/: __init__.py  api.py  requests.py
info_bot/clients/: __init__.py
info_bot/clients/AbstractClient/: AbstractClient.py
info_bot/core/: __init__.py
info_bot/dto/: orders.py
info_bot/helpers/: states.py
info_bot/keyboards/: __init__.py  keyboards.py
info_bot/presentation/: OrderMessage.py
info_bot/schemas/: __init__.py  schemas.py
info_bot/settings/: settings.py
info_bot/utils/: __init__.py  utils.py
(+42 files in other folders)
