[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ilya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
bcrypt = "^4.2.1"
requests = "^2.32.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
