[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ilya"]
readme = "README.md"


[tool.poetry.dependencies]
fastapi = {extras = ["all"], version = "^0.115.5"}
asyncpg = "^0.30.0"
python = "^3.12"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
greenlet = "^3.1.1"
aiobotocore = "^2.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
